<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorIcons"
    tools:context="owl.app.elsalmon.fragments.ServiciosBeneficiosFragment">

    <ImageView
        android:id="@+id/imageBeneficios"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/playa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:orientation="vertical"
        android:layout_margin="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40dp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/borde"
                android:text="@string/servyBeneficios"
                android:textColor="@color/colorIcons"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:typeface="serif"
            android:textColor="@color/colorIcons"
            android:textSize="20dp"
            android:text="@string/serviciosContenidoUno"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:typeface="serif"
            android:textSize="20dp"
            android:textColor="@color/colorIcons"
            android:text="@string/serviciosContenidoDos"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorPrimaryText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40dp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/borde"
                android:text="@string/beneficios"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorIcons"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"
            android:textColor="@color/colorIcons"
            android:textSize="16dp"
            android:gravity="center"
            android:text="@string/beneficiosContenido"/>

    </LinearLayout>



</RelativeLayout>
