<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="owl.app.elsalmon.fragments.ValoresFragment">

    <ImageView
        android:id="@+id/imagValores"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/playa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valores"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="35dp"
            android:textColor="@color/colorIcons"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/responsabilidad"
                app:civ_border_color="#f0f0f0"
                app:civ_border_width="3dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/responsabilidad"
                android:paddingLeft="10dp"
                android:textColor="@color/colorIcons"
                android:textStyle="bold"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/respeto"
                app:civ_border_color="#f0f0f0"
                app:civ_border_width="3dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/respeto"
                android:paddingLeft="10dp"
                android:textColor="@color/colorIcons"
                android:textStyle="bold"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/sentidocomun"
                app:civ_border_color="#f0f0f0"
                app:civ_border_width="3dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/sentidoComun"
                android:textColor="@color/colorIcons"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/creatividad"
                app:civ_border_color="#f0f0f0"
                app:civ_border_width="3dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/colorIcons"
                android:text="@string/creatividad"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/trabajoenequipo"
                app:civ_border_color="#f0f0f0"
                app:civ_border_width="3dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/trabajoEnEquipo"
                android:textColor="@color/colorIcons"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textSize="20dp"/>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
