<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content"
    tools:context="owl.app.elsalmon.fragments.EncuentranosFragment">

    <ImageView
        android:id="@+id/imageEncuentra"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/playa" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:layout_margin="5dp"
            android:text="Ubicación"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="35dp"
            android:background="@drawable/borde"
            android:textColor="@color/colorIcons"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ubiveracruz1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_encuentranos"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/direccionVeracruz"
                android:textColor="@color/colorIcons"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ubiveracruz2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_encuentranos"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/direccionMendoza1"
                android:textColor="@color/colorIcons"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ubimendoza"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_encuentranos"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/direccionMendoza2"
                android:textColor="@color/colorIcons"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ubiorizaba"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_encuentranos"
                android:gravity="center_vertical"
                android:layout_marginLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/direccionOrizaba"
                android:textColor="@color/colorIcons"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.30"
            android:textColor="@color/colorIcons"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/leyendaUbicacion"/>

    </LinearLayout>

</RelativeLayout>
